--- a/templates/academy_site/home.html
+++ b/templates/academy_site/home.html
@@ -2,8 +2,7 @@
 <body>
 SITE
 {% if user.is_authenticated %}
-<p>Welcome, {{ user.email }}. Thanks for logging in.</p>
-<p><a href="{% url 'academy_site:logout' %}">[logout]</a></p>
+<p>Welcome, {{ user.email }}. Thanks for logging in.<a href="{% url 'academy_site:profile' %}">[profile]</a></p>
 {% else %}
 <p>Welcome, new user. Please log in.</p>
 
