--- a/templates/academy_site/profile_edit.html
+++ b/templates/academy_site/profile_edit.html
@@ -2,7 +2,7 @@
 <body>
 
 <h2>EDIT PROFILE</h2>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ edit_form.as_p }}
     <button type="submit">Save</button>
