login/logout admin panel

--- a/templates/academy_admin/index.html
+++ b/templates/academy_admin/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
 ADMIN
+{% if user.is_authenticated %}
+<p>Welcome, {{ user.email }}. Thanks for logging in.<a href="{% url 'academy_site:logout' %}">[logout]</a></p>
+{% else %}
+<p>Welcome, new user. Please log in.</p>
+{% endif %}
 </body>
 </html>
