base site markup

--- a/templates/academy_site/profile.html
+++ b/templates/academy_site/profile.html
@@ -1,13 +1,7 @@
-<html>
-<body>
-SITE
-{% if user.is_authenticated %}
-<p>Welcome, {{ user.email }}. Thanks for logging in.</p>
-<p><a href="{% url 'academy_site:profile_edit' %}">[edit]</a></p>
-<p><a href="{% url 'academy_site:logout' %}">[logout]</a></p>
-{% else %}
-<p>Welcome, new user. Please log in.</p>
-{% endif%}
+{% extends 'academy_site/base.html' %}
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
-</body>
-</html>
+{% block content %}
+    <p><a href="{% url 'academy_site:profile_edit' %}">[edit]</a></p>
+    <p><a href="{% url 'academy_site:logout' %}">[logout]</a></p>
+{% endblock %}
