--- a/templates/academy_site/home.html
+++ b/templates/academy_site/home.html
@@ -1,40 +1,11 @@
-<html>
-<body>
-SITE
-{% if user.is_authenticated %}
-<p>Welcome, {{ user.email }}. Thanks for logging in.<a href="{% url 'academy_site:profile' %}">[profile]</a></p>
-{% else %}
-<p>Welcome, new user. Please log in.</p>
+{% extends 'academy_site/base.html' %}
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
-
-{% if signup_form %}
-<h2>Sign up</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ signup_form.as_p }}
-    <button type="submit">Sign up</button>
-</form>
-{% endif %}
-
-{% if signin_form %}
-<h2>Sign in</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ signin_form.as_p }}
-    <button type="submit">Sign in</button>
-</form>
-{% endif %}
-{% endif %}
-
-
-{% if contact_us_form %}
-<h2>Contact us</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ contact_us_form.as_p }}
-    <button type="submit">Send</button>
-</form>
-{% endif %}
-
-</body>
-</html>
+{% block content %}
+    <h2>Contact us</h2>
+    <form method="post" action="{% url 'academy_site:contact_us' %}">
+        {% csrf_token %}
+        {{ contact_us_form.as_p }}
+        <button type="submit">Send</button>
+    </form>
+{% endblock %}
