--- a/templates/academy_admin/index.html
+++ b/templates/academy_admin/index.html
@@ -1,17 +1,6 @@
-<html>
-<body>
-<h1><a href="{% url 'academy_admin:index' %}">BACKOFFICE</a></h1>
-<div>
-    <div style="display: inline-block; margin-right: 50px;">
-        <div style="display: inline-block; height: 50px; width: 50px; margin-right: 10px;">
-            <img src="{{ user.photo.url }}" alt="">
-        </div>
-        <div style="display: inline-block;">
-            <p>{{ user.full_name }}</p>
-            <p>{{ user.get_role }}</p>
-            <p><a href="{% url 'academy_admin:logout' %}">[logout]</a></p>
-        </div>
-    </div>
-</div>
-</body>
-</html>
+{% extends 'academy_admin/base_index.html' %}
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
+
+{% block subcontent %}
+    HOMEPAGE
+{% endblock %}
