--- a/templates/academy_admin/login.html
+++ b/templates/academy_admin/login.html
@@ -1,10 +1,11 @@
-<html>
-<body>
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ login_form.as_p }}
-    <button type="submit">Login</button>
-</form>
-</body>
-</html>
+{% extends 'academy_admin/base.html' %}
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
+
+{% block content %}
+    <h2>Login</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ login_form.as_p }}
+        <button type="submit">Login</button>
+    </form>
+{% endblock %}
