--- a/templates/academy_site/header.html
+++ b/templates/academy_site/header.html
@@ -1,17 +1,23 @@
+{% load static %}{% get_static_prefix as STATIC_PREFIX %}
+
 <div style="display: flex; justify-content: space-around;">
     <h1><a href="{% url 'academy_site:home' %}">HERSTELACADEMIE</a></h1>
     <div>
         {% if user.is_authenticated %}
-        <div style="display: inline-block; margin-right: 10px;">
-            <img style="height: 50px; width: 50px;" src="{{ user.photo.url }}" alt="">
-        </div>
-        <div style="display: inline-block;">
-            <p>{{ user.full_name }}</p>
-            <p>{{ user.get_role }}</p>
-            <p><a href="{% url 'academy_site:profile' %}">[profile]</a></p>
-        </div>
+            <div style="display: inline-block; margin-right: 10px;">
+                {% if user.photo %}
+                    <img style="height: 50px; width: 50px;" src="{{ user.photo.url }}" alt="">
+                {% else %}
+                    <img style="height: 50px; width: 50px;" src="{{ STATIC_PREFIX }}academy/img/anonymous.png" alt="">
+                {% endif %}
+            </div>
+            <div style="display: inline-block;">
+                <p>{{ user.full_name }}</p>
+                <p>{{ user.get_role }}</p>
+                <p><a href="{% url 'academy_site:profile' %}">[profile]</a></p>
+            </div>
         {% else %}
-        <p>Welcome, new user. Please log in.</p>
+            <p>Welcome, new user. Please log in.</p>
         {% endif %}
     </div>
 </div>
@@ -19,17 +25,17 @@
 <div style="background-color: beige; text-align: center;">MENU</div>
 
 {% if not user.is_authenticated %}
-<h2>Sign up</h2>
-<form method="post" action="{% url 'academy_site:signup' %}">
-    {% csrf_token %}
-    {{ signup_form.as_p }}
-    <button type="submit">Sign up</button>
-</form>
+    <h2>Sign up</h2>
+    <form method="post" action="{% url 'academy_site:signup' %}">
+        {% csrf_token %}
+        {{ signup_form.as_p }}
+        <button type="submit">Sign up</button>
+    </form>
 
-<h2>Sign in</h2>
-<form method="post" action="{% url 'academy_site:signin' %}">
-    {% csrf_token %}
-    {{ signin_form.as_p }}
-    <button type="submit">Sign in</button>
-</form>
+    <h2>Sign in</h2>
+    <form method="post" action="{% url 'academy_site:signin' %}">
+        {% csrf_token %}
+        {{ signin_form.as_p }}
+        <button type="submit">Sign in</button>
+    </form>
 {% endif %}
