--- a/templates/academy_admin/header.html
+++ b/templates/academy_admin/header.html
@@ -16,7 +16,7 @@
             <p><a href="{% url 'academy_admin:logout' %}">[logout]</a></p>
         </div>
     </div>
-    <div><a href="{% url 'academy_admin:index' %}">[+ADD CITY]</a></div>
+    <div><a href="{% url 'academy_admin:add_city' %}">[+ADD CITY]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[+ADD LESSON]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[THEMES]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[LESSONS]</a></div>
