--- a/templates/academy_site/profile_edit.html
+++ b/templates/academy_site/profile_edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h2>EDIT PROFILE</h2>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" action="{% url 'academy_site:profile_edit' %}">
         {% csrf_token %}
         {{ edit_form.as_p }}
         <button type="submit">Save</button>
