--- a/templates/academy_site/home.html
+++ b/templates/academy_site/home.html
@@ -2,10 +2,29 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
 {% block content %}
-    <h2>Contact us</h2>
-    <form method="post" action="{% url 'academy_site:contact_us' %}">
-        {% csrf_token %}
-        {{ contact_us_form.as_p }}
-        <button type="submit">Send</button>
-    </form>
+    <div>
+        <h2>Cities</h2>
+        <ul>
+            {% for city in cities %}
+                <li style="display: inline-block; width: 20%; margin-right: 5%; text-align: center;
+                        background: url({{ city.photo.url }}); background-size: cover;">
+                <a href="{% url 'academy_site:home' %}" style="color: white">
+                    <p>name: {{ city.name }}</p>
+                    <p>description: {{ city.description }}</p>
+                    <p>phone: {{ city.phone }}</p>
+                    <p>email: {{ city.email }}</p>
+                    <p>address: {{ city.school_address }}</p>
+                </a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div>
+        <h2>Contact us</h2>
+        <form method="post" action="{% url 'academy_site:contact_us' %}">
+            {% csrf_token %}
+            {{ contact_us_form.as_p }}
+            <button type="submit">Send</button>
+        </form>
+    </div>
 {% endblock %}
