city retrieve, update, delete (site, admin panel)

--- a/templates/academy_admin/menu.html
+++ b/templates/academy_admin/menu.html
@@ -1,5 +1,5 @@
 <div><a href="{% url 'academy_admin:index' %}">Homepage</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Regions</a></div>
+<div><a href="{% url 'academy_admin:cities' %}">Regions</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Wokrboek</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Wokrgroep</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Newsletters</a></div>
