partners CRUD(admin panel)

--- a/templates/academy_admin/menu.html
+++ b/templates/academy_admin/menu.html
@@ -4,5 +4,5 @@
 <div><a href="{% url 'academy_admin:index' %}">Wokrgroep</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Newsletters</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Statistics</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Partners</a></div>
+<div><a href="{% url 'academy_admin:partners' %}">Partners</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Security</a></div>
