partners view(site)

--- a/templates/academy_admin/city_detail.html
+++ b/templates/academy_admin/city_detail.html
@@ -9,4 +9,23 @@
         {{ update_city_form.as_p }}
         <button type="submit">Save</button>
     </form>
+
+    <h3>Partners</h3>
+
+    <table style="margin-bottom: 30px;">
+        <tr>
+            <th>NAME</th>
+            <th>LAST UPDATE</th>
+        </tr>
+        {% for partner in city.partners.all %}
+            <tr>
+                <td><a href="{% url 'academy_admin:partner_detail' partner.pk %}">{{ partner.name }}</a></td>
+                <td>{{ partner.last_update }}</td>
+                <td><a href="{% url 'academy_admin:partner_detail' partner.pk %}">[Edit]</a></td>
+                <td><a href="{% url 'academy_admin:delete_partner' partner.pk %}">[Delete]</a></td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    <a href="{% url 'academy_admin:add_partner' %}">[+ADD PARTNER]</a>
 {% endblock %}
