--- a/templates/academy_admin/partners.html
+++ b/templates/academy_admin/partners.html
@@ -7,10 +7,12 @@
     <table style="margin-bottom: 50px;">
         <tr>
             <th>PARTNER</th>
+            <th>LAST UPDATE</th>
         </tr>
         {% for partner in partners %}
             <tr>
                 <td><a href="{% url 'academy_admin:partner_detail' partner.pk %}">{{ partner.name }}</a></td>
+                <td>{{ partner.last_update }}</td>
                 <td><a href="{% url 'academy_admin:partner_detail' partner.pk %}">[Edit]</a></td>
                 <td><a href="{% url 'academy_admin:delete_partner' partner.pk %}">[Delete]</a></td>
             </tr>
