--- a/templates/academy_site/city_detail.html
+++ b/templates/academy_site/city_detail.html
@@ -18,15 +18,38 @@
         </form>
     </div>
     <div>
+        <h2>Teachers</h2>
+        <ul>
+            {% for auth_teacher in teachers %}
+                <li style="display: inline-block;margin-right: 2%; text-align: center; max-width: 15%;">
+                    <p>
+                        LINKS:
+                        {% if auth_teacher.teacher.facebook_link %}
+                            <a href="{{ auth_teacher.teacher.facebook_link }}">facebook_link</a>
+                        {% endif %}
+                        {% if auth_teacher.teacher.instagram_link %}
+                            <a href="{{ auth_teacher.teacher.instagram_link }}">instagram_link</a>
+                        {% endif %}
+                        {% if auth_teacher.teacher.other_link %}
+                            <a href="{{ auth_teacher.teacher.other_link }}">other_link</a>
+                        {% endif %}
+                    </p>
+                    <p>BIO: {{ auth_teacher.teacher.bio }}</p>
+                    <img src="{{ auth_teacher.photo.url }}" style="width: 50px; height: 50px;">
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div>
         <h2>Partners</h2>
         <ul>
             {% for partner in city.partners.all %}
                 <li style="display: inline-block;margin-right: 2%; text-align: center;">
-                <p>{{ partner.name }}</p>
-                <a href="{{ partner.link }}">
-                    <img src="{{ partner.logo.url }}" alt="{{ partner.name }}" title="{{ partner.name }}"
-                         style="width: 50px; height: 50px;">
-                </a>
+                    <p>{{ partner.name }}</p>
+                    <a href="{{ partner.link }}">
+                        <img src="{{ partner.logo.url }}" alt="{{ partner.name }}" title="{{ partner.name }}"
+                             style="width: 50px; height: 50px;">
+                    </a>
                 </li>
             {% endfor %}
         </ul>
