--- a/templates/academy_admin/header.html
+++ b/templates/academy_admin/header.html
@@ -18,7 +18,7 @@
     </div>
     <div><a href="{% url 'academy_admin:add_city' %}">[+ADD CITY]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[+ADD LESSON]</a></div>
-    <div><a href="{% url 'academy_admin:index' %}">[THEMES]</a></div>
+    <div><a href="{% url 'academy_admin:themes' %}">[THEMES]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[LESSONS]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[CALENDAR]</a></div>
 </div>
