--- a/templates/academy_site/city_detail.html
+++ b/templates/academy_site/city_detail.html
@@ -10,12 +10,18 @@
         <p>address: {{ city.school_address }}</p>
     </div>
     <div>
-        <h2>Contact us</h2>
-        <form method="post" action="{% url 'academy_site:contact_us' %}">
-            {% csrf_token %}
-            {{ contact_us_form.as_p }}
-            <button type="submit">Send</button>
-        </form>
+        <h2>Themes</h2>
+        <ul>
+            {% for theme in city.theme_set.all %}
+                <li style="display: inline-block; width: 20%; margin-right: 5%; text-align: center;
+                        background: url({{ theme.photo.url }}) center; background-size: cover;">
+                    <a href="{% url 'academy_site:city_detail' city.slug %}" style="color: white">
+                        <p>name: {{ theme.name }}</p>
+                        <p>description: {{ theme.description }}</p>
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
     </div>
     <div>
         <h2>Teachers</h2>
@@ -53,5 +59,13 @@
                 </li>
             {% endfor %}
         </ul>
+    </div>
+    <div>
+        <h2>Contact us</h2>
+        <form method="post" action="{% url 'academy_site:contact_us' %}">
+            {% csrf_token %}
+            {{ contact_us_form.as_p }}
+            <button type="submit">Send</button>
+        </form>
     </div>
 {% endblock %}
