courses CRUD(admin panel, site)

--- a/templates/academy_admin/header.html
+++ b/templates/academy_admin/header.html
@@ -17,8 +17,8 @@
         </div>
     </div>
     <div><a href="{% url 'academy_admin:add_city' %}">[+ADD CITY]</a></div>
-    <div><a href="{% url 'academy_admin:index' %}">[+ADD LESSON]</a></div>
+    <div><a href="{% url 'academy_admin:add_course' %}">[+ADD LESSON]</a></div>
     <div><a href="{% url 'academy_admin:themes' %}">[THEMES]</a></div>
-    <div><a href="{% url 'academy_admin:index' %}">[LESSONS]</a></div>
+    <div><a href="{% url 'academy_admin:courses' %}">[LESSONS]</a></div>
     <div><a href="{% url 'academy_admin:index' %}">[CALENDAR]</a></div>
 </div>
