--- a/templates/academy_admin/theme_detail.html
+++ b/templates/academy_admin/theme_detail.html
@@ -2,6 +2,8 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
 {% block subcontent %}
+    <h2>{{ theme.name }}</h2>
+
     <form method="post" enctype="multipart/form-data" action="{% url 'academy_admin:theme_detail' theme.pk %}">
         {% csrf_token %}
         {{ update_theme_form.as_p }}
