sign up for a course on the site

--- a/templates/academy_site/profile.html
+++ b/templates/academy_site/profile.html
@@ -4,4 +4,21 @@
 {% block content %}
 <p><a href="{% url 'academy_site:profile_edit' %}">[edit]</a></p>
 <p><a href="{% url 'academy_site:logout' %}">[logout]</a></p>
+<div>
+<h2>My courses</h2>
+    <table>
+        <tr>
+            <th>COURSE</th>
+            <th>STATUS</th>
+        </tr>
+        {% for user_course in user.siteuser.usercourse_set.all %}
+            <tr>
+                <td><a
+                        href="{% url 'academy_site:course_detail' city_slug=user_course.course.theme.city.slug theme_slug=user_course.course.theme.slug course_slug=user_course.course.slug %}"
+                >{{ user_course.course.name }}</a></td>
+                <td>{{ user_course.course.status }}</td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
