--- a/templates/academy_admin/menu.html
+++ b/templates/academy_admin/menu.html
@@ -5,4 +5,5 @@
 <div><a href="{% url 'academy_admin:index' %}">Newsletters</a></div>
 <div><a href="{% url 'academy_admin:index' %}">Statistics</a></div>
 <div><a href="{% url 'academy_admin:partners' %}">Partners</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Security</a></div>
+<div><a href="{% url 'academy_admin:teachers' %}">Teachers</a></div>
+<div><a href="{% url 'academy_admin:security' %}">Security</a></div>
