--- a/templates/academy_site/city_detail.html
+++ b/templates/academy_site/city_detail.html
@@ -26,22 +26,22 @@
     <div>
         <h2>Teachers</h2>
         <ul>
-            {% for auth_teacher in teachers %}
+            {% for teacher in teachers %}
                 <li style="display: inline-block;margin-right: 2%; text-align: center; max-width: 15%;">
                     <p>
                         LINKS:
-                        {% if auth_teacher.teacher.facebook_link %}
-                            <a href="{{ auth_teacher.teacher.facebook_link }}">facebook_link</a>
+                        {% if teacher.facebook_link %}
+                            <a href="{{ teacher.facebook_link }}">facebook_link</a>
                         {% endif %}
-                        {% if auth_teacher.teacher.instagram_link %}
-                            <a href="{{ auth_teacher.teacher.instagram_link }}">instagram_link</a>
+                        {% if teacher.instagram_link %}
+                            <a href="{{ teacher.instagram_link }}">instagram_link</a>
                         {% endif %}
-                        {% if auth_teacher.teacher.other_link %}
-                            <a href="{{ auth_teacher.teacher.other_link }}">other_link</a>
+                        {% if teacher.other_link %}
+                            <a href="{{ teacher.other_link }}">other_link</a>
                         {% endif %}
                     </p>
-                    <p>BIO: {{ auth_teacher.teacher.bio }}</p>
-                    <img src="{{ auth_teacher.photo.url }}" style="width: 50px; height: 50px;">
+                    <p>BIO: {{ teacher.bio }}</p>
+                    <img src="{{ teacher.auth_user.photo.url }}" style="width: 50px; height: 50px;">
                 </li>
             {% endfor %}
         </ul>
