--- a/templates/academy_site/profile.html
+++ b/templates/academy_site/profile.html
@@ -2,23 +2,26 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
 {% block content %}
-<p><a href="{% url 'academy_site:profile_edit' %}">[edit]</a></p>
-<p><a href="{% url 'academy_site:logout' %}">[logout]</a></p>
-<div>
-<h2>My courses</h2>
-    <table>
-        <tr>
-            <th>COURSE</th>
-            <th>STATUS</th>
-        </tr>
-        {% for user_course in user.siteuser.usercourse_set.all %}
+    {% if not user.siteuser.is_confirmed %}
+        <p><a href="{% url 'academy_site:new_confirmation_code' %}">[SEND NEW CONFIRMATION CODE]</a></p>
+    {% endif %}
+    <p><a href="{% url 'academy_site:profile_edit' %}">[EDIT]</a></p>
+    <p><a href="{% url 'academy_site:logout' %}">[LOGOUT]</a></p>
+    <div>
+        <h2>My courses</h2>
+        <table>
             <tr>
-                <td><a
-                        href="{% url 'academy_site:course_detail' city_slug=user_course.course.theme.city.slug theme_slug=user_course.course.theme.slug course_slug=user_course.course.slug %}"
-                >{{ user_course.course.name }}</a></td>
-                <td>{{ user_course.course.status }}</td>
+                <th>COURSE</th>
+                <th>STATUS</th>
             </tr>
-        {% endfor %}
-    </table>
-</div>
+            {% for user_course in user.siteuser.usercourse_set.all %}
+                <tr>
+                    <td><a
+                            href="{% url 'academy_site:course_detail' city_slug=user_course.course.theme.city.slug theme_slug=user_course.course.theme.slug course_slug=user_course.course.slug %}"
+                    >{{ user_course.course.name }}</a></td>
+                    <td>{{ user_course.course.status }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock %}
