--- a/templates/academy_site/header.html
+++ b/templates/academy_site/header.html
@@ -1,5 +1,21 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
+{% if messages %}
+    <style>
+        .success {
+            color: green;
+        }
+
+        .error {
+            color: red;
+        }
+    </style>
+    <ul style="text-align: center; font-size: 20px;">
+        {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+        {% endfor %}
+    </ul>
+{% endif %}
 <div style="display: flex; justify-content: space-around;">
     <h1><a href="{% url 'academy_site:home' %}">HERSTELACADEMIE</a></h1>
     <div>
@@ -31,6 +47,13 @@
         {% csrf_token %}
         {{ signup_form.as_p }}
         <button type="submit">Sign up</button>
+    </form>
+
+    <h2>Reset password</h2>
+    <form method="post" action="{% url 'academy_site:reset_password' %}">
+        {% csrf_token %}
+        {{ reset_password_form.as_p }}
+        <button type="submit">Reset password</button>
     </form>
 
     <h2>Sign in</h2>
