--- a/templates/academy_admin/security.html
+++ b/templates/academy_admin/security.html
@@ -11,10 +11,11 @@
         </tr>
         {% for admin in admins %}
             <tr>
-                <td><a href="{% url 'academy_admin:security_detail' admin.pk %}">{{ admin.full_name }}</a></td>
+                <td><a href="{% url 'academy_admin:user_detail' admin.pk %}">{{ admin.full_name }}</a></td>
                 <td>{{ admin.get_role }}</td>
-                <td><a href="{% url 'academy_admin:security_detail' admin.pk %}">[Edit]</a></td>
-                <td><a href="{% url 'academy_admin:delete_security' admin.pk %}">[Delete]</a></td>
+                {% if user.pk != admin.pk %}
+                    <td><a href="{% url 'academy_admin:delete_security' admin.pk %}">[Delete]</a></td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
