--- a/templates/academy_admin/add_course.html
+++ b/templates/academy_admin/add_course.html
@@ -7,14 +7,15 @@
     <div>CITY</div>
     <select onchange="location = this.value;">
         {% for city in cities %}
-            <option value="{% url 'academy_admin:add_course' %}?city={{ city.slug }}"
-            {% if city == selected_city %}selected{% endif %}>{{ city.name }}</option>
+            <option value="{% url 'academy_admin:add_course' %}?city={{ city.pk }}"
+                    {% if city == selected_city %}selected{% endif %}>{{ city.name }}</option>
         {% endfor %}
     </select>
 
     <form method="post" enctype="multipart/form-data" action="{% url 'academy_admin:add_course' %}">
         {% csrf_token %}
         {{ add_course_form.as_p }}
-        <button type="submit">Save</button>
+        <input type="submit" name="save" value="SAVE"/>
+        <input type="submit" name="save_draft" value="SAVE DRAFT"/>
     </form>
 {% endblock %}
