--- a/templates/academy_admin/cities.html
+++ b/templates/academy_admin/cities.html
@@ -13,8 +13,8 @@
             <tr>
                 <td><a href="{% url 'academy_admin:city_detail' city.pk %}">{{ city.name }}</a></td>
                 <td>{{ city.last_update }}</td>
-                <td><a href="{% url 'academy_admin:index' %}">[+ Add lesson]</a></td>
-                <td><a href="{% url 'academy_admin:index' %}">[+ Add theme]</a></td>
+                <td><a href="{% url 'academy_admin:add_course' %}?city={{ city.pk }}">[+ Add course]</a></td>
+                <td><a href="{% url 'academy_admin:add_theme' %}?city={{ city.pk }}">[+ Add theme]</a></td>
                 <td><a href="{% url 'academy_admin:delete_city' city.pk %}">[Delete]</a></td>
             </tr>
         {% endfor %}
