--- a/templates/academy_admin/header.html
+++ b/templates/academy_admin/header.html
@@ -1,24 +1,26 @@
 {% load static %}{% get_static_prefix as STATIC_PREFIX %}
 
-<h1><a href="{% url 'academy_admin:index' %}">BACKOFFICE</a></h1>
+<h1><a href="{% url user.get_default_page %}">BACKOFFICE</a></h1>
 <div style="display: flex; justify-content: space-around; align-items: center; background-color: #777777;">
     <div>
-        <div style="display: inline-block; margin-right: 10px;">
+        <a href="{% url 'academy_admin:user_profile' %}">
+            <div style="display: inline-block; margin-right: 10px;">
             {% if user.photo %}
                 <img style="height: 50px; width: 50px;" src="{{ user.photo.url }}" alt="">
             {% else %}
                 <img style="height: 50px; width: 50px;" src="{{ STATIC_PREFIX }}academy/img/anonymous.png" alt="">
             {% endif %}
         </div>
+        </a>
         <div style="display: inline-block;">
             <p>{{ user.full_name }}</p>
             <p>{{ user.get_role }}</p>
             <p><a href="{% url 'academy_admin:logout' %}">[logout]</a></p>
         </div>
     </div>
-    <div><a href="{% url 'academy_admin:add_city' %}">[+ADD CITY]</a></div>
-    <div><a href="{% url 'academy_admin:add_course' %}">[+ADD LESSON]</a></div>
-    <div><a href="{% url 'academy_admin:themes' %}">[THEMES]</a></div>
-    <div><a href="{% url 'academy_admin:courses' %}">[LESSONS]</a></div>
-    <div><a href="{% url 'academy_admin:index' %}">[CALENDAR]</a></div>
+    {% if user.is_superuser %}<div><a href="{% url 'academy_admin:add_city' %}">[+ADD CITY]</a></div>{% endif %}
+    {% if user.is_admin %}<div><a href="{% url 'academy_admin:add_course' %}">[+ADD COURSE]</a></div>{% endif %}
+    {% if user.is_admin %}<div><a href="{% url 'academy_admin:themes' %}">[THEMES]</a></div>{% endif %}
+    {% if user.is_staff %}<div><a href="{% url 'academy_admin:courses' %}">[COURSES]</a></div>{% endif %}
+    {% if user.is_staff %}<div><a href="{% url 'academy_admin:homepage' %}">[CALENDAR]</a></div>{% endif %}
 </div>
