--- a/templates/academy_admin/menu.html
+++ b/templates/academy_admin/menu.html
@@ -1,9 +1,9 @@
-<div><a href="{% url 'academy_admin:index' %}">Homepage</a></div>
-<div><a href="{% url 'academy_admin:cities' %}">Regions</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Wokrboek</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Wokrgroep</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Newsletters</a></div>
-<div><a href="{% url 'academy_admin:index' %}">Statistics</a></div>
-<div><a href="{% url 'academy_admin:partners' %}">Partners</a></div>
-<div><a href="{% url 'academy_admin:teachers' %}">Teachers</a></div>
-<div><a href="{% url 'academy_admin:security' %}">Security</a></div>
+{% if user.is_superuser %}<div><a href="{% url 'academy_admin:homepage' %}">Homepage</a></div>{% endif %}
+{% if user.is_admin %}<div><a href="{% url 'academy_admin:cities' %}">Regions</a></div>{% endif %}
+{% if user.is_superuser %}<div><a href="{% url 'academy_admin:homepage' %}">Wokrboek</a></div>{% endif %}
+{% if user.is_superuser %}<div><a href="{% url 'academy_admin:homepage' %}">Wokrgroep</a></div>{% endif %}
+{% if user.is_admin %}<div><a href="{% url 'academy_admin:homepage' %}">Newsletters</a></div>{% endif %}
+{% if user.is_superuser %}<div><a href="{% url 'academy_admin:homepage' %}">Statistics</a></div>{% endif %}
+{% if user.is_admin %}<div><a href="{% url 'academy_admin:partners' %}">Partners</a></div>{% endif %}
+{% if user.is_admin %}<div><a href="{% url 'academy_admin:teachers' %}">Teachers</a></div>{% endif %}
+{% if user.is_superuser %}<div><a href="{% url 'academy_admin:security' %}">Security</a></div>{% endif %}
